--- a/public/index.html
+++ b/public/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+
 <html>
 
 <head>
@@ -17,6 +19,8 @@
 		<input type="button" value="Submit" id="submit">
 	</form> -->
     <script src="javascripts/webmap.js"></script>
+    
+
 </body>
 
 
