--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="stylesheets/leafletdrw-drw.css">
 	<link rel="stylesheet" href="stylesheets/leaflet-dialog.css">
 	<link rel="stylesheet" href="stylesheets/easy-button.css">
+	<link rel="stylesheet" href="stylesheets/leaflet-notifications.css">
+	<link rel="stylesheet" href="stylesheets/leaflet-notifications.min.css">
 	
 
 </head>
